--- a/styles/_defaults.scss
+++ b/styles/_defaults.scss
@@ -32,11 +32,20 @@
     background-color:$strong-cyan;
     font-size:18px;
     box-shadow:0 3px 0 0 hsl(165, 59%, 38%), 0 15px 20px 5px hsla(165, 100%, 51%, 0.123);
+    cursor:pointer;
+
+    &:hover{
+        background-color:hsl(171, 53%, 62%);
+    }
     }
 
 .btn--blue{
     background-color:$light-blue;
     box-shadow:0 3px 0 0 hsl(214, 76%, 33%), 0 15px 20px 5px hsla(236, 100%, 51%, 0.123);
+
+    &:hover{
+        background-color:hsl(233, 100%, 75%);
+    }
     }
 
 section{
