--- a/styles/style.scss
+++ b/styles/style.scss
@@ -119,7 +119,11 @@
         font-size:18px;
         margin-bottom:25px;
         color:$dark-grayish-blue;
+    }
 
+    &__list-item:hover{
+        cursor:pointer;
+        color:$strong-cyan;
     }
 
    
@@ -129,6 +133,12 @@
         display:flex;
         justify-content: space-between;
         margin:auto;
+        
+       
+    }
+
+    &__socials-item:hover{
+        cursor:pointer;
     }
 }
 
